--- a/sway/config
+++ b/sway/config
@@ -1,4 +1,12 @@
+# Default config for sway
+#
+# Copy this to ~/.config/sway/config and edit it to your liking.
+#
+# Read `man 5 sway` for a complete reference.
+
 ### Variables
+#
+# Logo key. Use Mod1 for Alt.
 set $mod Mod4
 # Home row direction keys, like vim
 set $left h
@@ -13,6 +21,7 @@ set $term kitty
 set $menu wofi --show drun | xargs swaymsg exec --
 
 exec_always  --no-startup-id  mako &
+exec wl-paste -t text --watch clipman store --no-persist
 ### Output configuration
 #
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
@@ -31,29 +40,35 @@ workspace 4 output HDMI-A-1
 workspace 5 output HDMI-A-1
 workspace 6 output HDMI-A-1
 
+# You can get the names of your outputs by running: swaymsg -t get_outputs
 input * {
     xkb_layout "de"
     xkb_variant "us"
 }
+### Idle configuration
 exec swayidle -w\
     timeout 1070 'swaylock -f -C ~/.config/swaylock/config'\
     timeout 770 'swaymsg "output * power off"' \
     resume 'swaymsg "output * power on"' \
     before-sleep 'swaylock -C ~/.config/swaylock/config'
-
-input "DELL0B24:00 27C6:0D42 Touchpad" {
+# This will lock your screen after 300 seconds of inactivity, then turn off
+# your displays after another 300 seconds, and turn your screens back on when
+# resumed. It will also lock your screen before your computer goes to sleep.### Input configuration
+#
+# Example configuration:
+    input "DELL0B24:00 27C6:0D42 Touchpad" {
            dwt enabled
            tap enabled
-           natural_scroll enabledpip3 install --upgrade git+https://github.com/talwrii/i3parse#egg=i3parse
+           natural_scroll enabled
            middle_emulation enabled
-           }
-
-
+       }
+# You can get the names of your inputs by running: swaymsg -t get_inputs
+# Read `man 5 sway-input` for more information about this section.
 default_border none
-default_border pixel 1
-default_floating_border pixel 1
 
-gaps inner  2
+default_border pixel 2
+default_floating_border pixel 1
+  gaps inner  2
 gaps outer  1
 
 smart_borders on
@@ -70,7 +85,12 @@ smart_borders on
     # Start your launcher
     bindsym $mod+d exec $menu
 
-   floating_modifier $mod normal
+    # Drag floating windows by holding down $mod and left mouse button.
+    # Resize them with right mouse button + $mod.
+    # Despite the name, also works for non-floating windows.
+    # Change normal to inverse to use left mouse button for resizing and right
+    # mouse button for dragging.
+    floating_modifier $mod normal
 
     # Reload the configuration file
     bindsym $mod+Shift+c reload
@@ -154,8 +174,16 @@ smart_borders on
     # Move focus to the parent container
     bindsym $mod+a focus parent
 #
+# Scratchpad:
+#
+    # Sway has a "scratchpad", which is a bag of holding for windows.
+    # You can send windows there and get them back later.
+
+    # Move the currently focused window to the scratchpad
     bindsym $mod+Shift+minus move scratchpad
 
+    # Show the next scratchpad window or hide the focused scratchpad window.
+    # If there are multiple scratchpad windows, this command cycles through them.
     bindsym $mod+minus scratchpad show
 #
 
@@ -189,5 +217,9 @@ bindsym $mod+r mode "resize"
 
 bindsym $mod+period workspace next
 bindsym $mod+comma workspace prev
+#
+# Status Bar:
+#
+# Read `man 5 sway-bar` for more information about this section.
 
 include ~/.config/sway/config.d/*
