--- a/config/hypr/keybindings.conf
+++ b/config/hypr/keybindings.conf
@@ -1,6 +1,16 @@
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
 
+bind = SUPER, h, movefocus, l
+bind = SUPER, l, movefocus, r
+bind = SUPER, k, movefocus, u
+bind = SUPER, j, movefocus, d
+
+bind = SUPER SHIFT, h, movewindow, l
+bind = SUPER SHIFT, l, movewindow, r
+bind = SUPER SHIFT, k, movewindow, u
+bind = SUPER SHIFT, j, movewindow, d
+
 bind = SUPER,Tab,cyclenext,
 bind = SUPER,Tab,bringactivetotop,
 
@@ -16,6 +26,8 @@ bind = SUPER, D, exec, wofi
 bind = SUPER,       F,      fullscreen, 1
 bind = SUPER, mouse:276, fullscreen, 0 
 bind = SUPER, mouse:276, exec, $notifycmd 'Fullscreen Mode'
+
+bind = SUPER, L, exec, swaylock
 
 bind = SUPER,       F,      exec, $notifycmd 'Fullscreen Mode'
 bind = SUPER,       S,      fullscreen, 0
