--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -25,7 +25,7 @@ env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
 exec-once=/usr/lib/xdg-desktop-portal-hyprland &
 exec-once= sleep 1 && dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP=Hyprland
 exec-once = mako
-exec-once=/usr/lib/polkit-kde-authentication-agent-1
+exec-once=/usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = wl-paste --watch cliphist store
 
 wl-clip-persist --clipboard regular &
@@ -43,8 +43,8 @@ exec-once = hyprpaper
 
 # Some default env vars.
 env = XCURSOR_SIZE,24
-env = XCURSOR_THEME,Catppuccin-Mocha-Dark-Cursors
-exec-once=hyprctl setcursor Catppuccin-Mocha-Dark-Cursors 24
+env = XCURSOR_THEME,Dracula-cursors
+exec-once=hyprctl setcursor Dracula-cursors 24
 
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
@@ -79,7 +79,7 @@ general {
     col.inactive_border = 0xff313244 0xff45475a 45deg
     resize_on_border=true
     layout = dwindle
-    no_border_on_floating = falsea
+    no_border_on_floating = false
     no_cursor_warps = false
 
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
@@ -114,7 +114,7 @@ decoration {
     }
 
     drop_shadow = true
-    shadow_range = 12
+    shadow_range = 8
     shadow_render_power = 3
     #col.shadow= 0xff$b4befeAlpha
     col.shadow = 0xffb4befe
@@ -147,6 +147,7 @@ dwindle {
     # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
     pseudotile = true # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
     preserve_split = true # you probably want this
+    no_gaps_when_only = 1
 }
 
 master {
