--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -11,22 +11,25 @@
 monitor=eDP-1, 1920x1080, 0x0, 1
 monitor=HDMI-A-1, 1920x1080, 1920x0, 1
 
-#env = XDG_SESSION_TYPE,wayland
+env = XDG_SESSION_DESKTOP=Hyprland
+env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
-env = QT_QPA_PLATFORM,wayland
+env = GDK_BACKEND=wayland,x11
+env = QT_QPA_PLATFORM=wayland;xcb
+env = QT_WAYLAND_DISABLE_WINDOWDECORATION=1
 env = MOZ_DISABLE_RDD_SANDBOX,1
 env = EGL_PLATFORM,wayland
 env = MOZ_ENABLE_WAYLAND,1
 env = QT_QPA_PLATFORMTHEME,qt5ct
-env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
 
 
 #exec-once = swaybg -i ~/.config/hypr/walls/2.png
 exec-once=/usr/lib/xdg-desktop-portal-hyprland &
-exec-once= sleep 1 && dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP=Hyprland
-exec-once = mako
-exec-once=/usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+exec-once= dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP=Hyprland
+exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once=/usr/lib/polkit-kde-authentication-agent-1
 exec-once = wl-paste --watch cliphist store
+exec-once = mako
 
 wl-clip-persist --clipboard regular &
 wl-paste --watch cliphist store &
@@ -67,6 +70,8 @@ input {
 device:wacom-intuos-s-pen {
   transform = 0
   output=eDP-1
+  region_position=[96, 0]
+  region_size=[1728, 1080]
   }
 
 general {
