--- a/config/hypr/keybindings.conf
+++ b/config/hypr/keybindings.conf
@@ -15,6 +15,9 @@ bind = SUPER,Tab,cyclenext,
 bind = SUPER,Tab,bringactivetotop,
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
+$launcher= ~/.config/hypr/rofi/bin/launcher
+#bind=SUPER,D,exec,$launcher
+#
 bind = SUPER, Return, exec, kitty
 bind = SUPER, Q, killactive,
 bind = SUPER, M, exit,
@@ -22,7 +25,8 @@ bind = SUPER, E, exec, thunar
 bind = SUPER, V, togglefloating,
 bind = SUPER, R, togglesplit,killactive
 bind = SUPER, P, pseudo, # dwindle
-bind = SUPER, D, exec, wofi
+bind = SUPER, D, exec, rofi -show drun -modi run,drun,filebrowser -theme ~/.config/rofi/launcher.rasi
+bind = SUPER SHIFT, D, exec, rofi -show run -modi run,drun,filebrowser -theme ~/.config/rofi/launcher.rasi
 bind = SUPER,       F,      fullscreen, 1
 bind = SUPER, mouse:276, fullscreen, 0 
 bind = SUPER, mouse:276, exec, $notifycmd 'Fullscreen Mode'
