--- a/config/hypr/keybindings.conf
+++ b/config/hypr/keybindings.conf
@@ -120,3 +120,6 @@ bind = ALT, mouse:275, workspace, e-1
 bindl=, XF86AudioMute, exec, volume -n mute toggle
 bindel=, XF86AudioRaiseVolume, exec, volume -n volume up
 bindel=, XF86AudioLowerVolume, exec, volume -n volume down
+
+bindl = , XF86MonBrightnessUp, exec, brillo -q -u 300000 -A 5 &&  notify-send 'Brightness' $(brillo -G)
+bindl = , XF86MonBrightnessDown, exec, brillo -q -u 300000 -U 5 && notify-send 'Brightness' $(brillo -G)
