--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -46,9 +46,7 @@ exec-once = hyprpaper
 
 # Some default env vars.
 env = XCURSOR_SIZE,24
-env = XCURSOR_THEME,Dracula-cursors
-exec-once=hyprctl setcursor Dracula-cursors 24
-
+env = XCURSOR_THEME, Catppuccin-Mocha-Dark-Cursors
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
@@ -104,7 +102,7 @@ decoration {
 
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    rounding = 10
+    rounding = 14
     blur {
         enabled = yes
         size = 8
