--- a/config/hypr/windowrules.conf
+++ b/config/hypr/windowrules.conf
@@ -12,6 +12,18 @@ workspace = 1, monitor:eDP-1, default:true
 workspace = 2, monitor:eDP-1, default:true
 workspace = 3, monitor:eDP-1, default:true
 #
+#
+# Dialogs
+windowrule=float,title:^(Open File)(.*)$
+windowrule=float,title:^(Select a File)(.*)$
+windowrule=float,title:^(Choose wallpaper)(.*)$
+windowrule=float,title:^(Open Folder)(.*)$
+windowrule=float,title:^(Save As)(.*)$
+windowrule=float,title:^(Library)(.*)$ 
+
+layerrule = blur, notifications
+layerrule = ignorealpha 0.69, notifications
+
 windowrulev2 = opacity 0.90 0.90,class:^(thunar)$
 windowrulev2 = opacity 0.90 0.90,class:^(kitty)$
 windowrulev2 = opacity 0.80 0.80,class:^(nwg-look)$
@@ -36,10 +48,3 @@ windowrulev2 = float,class:^(nm-connection-editor)$
 windowrulev2 = workspace 5, title:^(.*(Disc|WebC)ord.*)$
 
 windowrulev2 = workspace 4 , title:^(.*Firefox.*)$
-
-
-# Example windowrule v1
-windowrule = float, ^(alacritty)$
-# Example windowrule v2
-# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-
