--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,11 +1,11 @@
 # vim:fileencoding=utf-8:ft=conf
 
-linux_display_server auto
+linux_display_server wayland
 
-font_family      JetBrainsMono NFM
-italic_font      auto
-bold_font        auto
-bold_italic_font auto
+font_family       JetBrainsMono Nerd Font Mono
+italic_font       JetBrainsMono Nerd Font Mono italic
+bold_font         JetBrainsMono Nerd Font Mono bold
+bold_italic_font  JetBrainsMono Nerd Font Mono bold italic
 
 font_size        15
 disable_ligatures never
