--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -75,7 +75,7 @@ device:wacom-intuos-s-pen {
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    gaps_in = 3
+    gaps_in = 4
     gaps_out = 4
     border_size = 2
     col.active_border = 0xffb4befe 0xff89dceb 45deg
@@ -129,23 +129,33 @@ decoration {
 #layerrule = blur, notifications
 
 
-animations {
-    enabled=1
 
-    bezier = default, 0.05, 0.9, 0.1, 1.05
-    bezier=overshot,0.13,0.99,0.29,1.1
-    bezier = liner, 1, 1, 1, 1
-    animation=windows,1,5,overshot,slide
-    animation=windowsOut, 1, 5, overshot, slide
-    animation=windowsMove,1,5,overshot,slide
-    animation=fadeIn,1,10,default
-    animation=fadeOut,1,10,default
-    animation=workspaces,1,6,overshot,slidefade 85%
+animations {
+    enabled = true
+    # Animation curves
+    
+    bezier = linear, 0, 0, 1, 1
+    bezier = md3_standard, 0.2, 0, 0, 1
+    bezier = md3_decel, 0.05, 0.7, 0.1, 1
+    bezier = md3_accel, 0.3, 0, 0.8, 0.15
+    bezier = overshot, 0.05, 0.9, 0.1, 1.1
+    bezier = crazyshot, 0.1, 1.5, 0.76, 0.92 
+    bezier = hyprnostretch, 0.05, 0.9, 0.1, 1.0
+    bezier = fluent_decel, 0.1, 1, 0, 1
+    bezier = easeInOutCirc, 0.85, 0, 0.15, 1
+    bezier = easeOutCirc, 0, 0.55, 0.45, 1
+    bezier = easeOutExpo, 0.16, 1, 0.3, 1
+    # Animation configs
+    animation = windows, 1, 3, md3_decel, popin 60%
     animation = border, 1, 10, default
+    animation = fade, 1, 2.5, md3_decel
+    # animation = workspaces, 1, 3.5, md3_decel, slide
+    animation = workspaces, 1, 3.5, easeOutExpo, slide
+    # animation = workspaces, 1, 7, fluent_decel, slidefade 15%
+    # animation = specialWorkspace, 1, 3, md3_decel, slidefadevert 15%
+    animation = specialWorkspace, 1, 3, md3_decel, slidevert
 }
 
-
-    animation = border, 1, 10, default
 dwindle {
     # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
     pseudotile = true # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
