--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -23,16 +23,14 @@ env = MOZ_ENABLE_WAYLAND,1
 env = QT_QPA_PLATFORMTHEME,qt5ct
 
 
-#exec-once = swaybg -i ~/.config/hypr/walls/2.png
-exec-once=/usr/lib/xdg-desktop-portal-hyprland &
-exec-once= dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP=Hyprland
-exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once=/usr/lib/polkit-kde-authentication-agent-1
-exec-once = wl-paste --watch cliphist store
-exec-once = mako
+exec-once = /usr/lib/xdg-desktop-portal-hyprland &
+exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP=Hyprland &
+exec-once = dbus-update-activation-environment --all &
+exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP &
+exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 &
+exec-once = mako &
+exec-once = wl-paste --type text --watch cliphist store # clipboard store text data
 
-wl-clip-persist --clipboard regular &
-wl-paste --watch cliphist store &
 udiskie &
 
 # $w1 = hyprctl hyprpaper wallpaper "eDP-1, ~/dotfiles/hypr/walls/2.png" 
