--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -19,7 +19,6 @@ env = QT_QPA_PLATFORM=wayland;xcb
 env = QT_WAYLAND_DISABLE_WINDOWDECORATION=1
 env = MOZ_DISABLE_RDD_SANDBOX,1
 env = EGL_PLATFORM,wayland
-env = MOZ_ENABLE_WAYLAND,1
 env = QT_QPA_PLATFORMTHEME,qt5ct
 
 
@@ -28,9 +27,9 @@ exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CUR
 exec-once = dbus-update-activation-environment --all &
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP &
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 &
+exec-once = /usr/bin/gnome-keyring-daemon --start --components=secrets &
 exec-once = mako &
-exec-once = wl-paste --type text --watch cliphist store # clipboard store text data
-
+exec-once = wl-paste --watch cliphist store &
 udiskie &
 
 # $w1 = hyprctl hyprpaper wallpaper "eDP-1, ~/dotfiles/hypr/walls/2.png" 
