--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -2,10 +2,10 @@
 
 linux_display_server wayland
 
-font_family       JetBrainsMono Nerd Font Mono
-italic_font       JetBrainsMono Nerd Font Mono italic
-bold_font         JetBrainsMono Nerd Font Mono bold
-bold_italic_font  JetBrainsMono Nerd Font Mono bold italic
+font_family       MonaspiceKr Nerd Font Mono
+italic_font       MonaspiceKr Nerd Font Mono Italic
+bold_font         MonaspiceKr Nerd Font Mono Bold
+bold_italic_font  MonaspiceKr Nerd Font Mono Bold Italic
 
 font_size        15
 disable_ligatures never
