--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -2,10 +2,8 @@
 
 linux_display_server wayland
 
-font_family       MonaspiceKr Nerd Font Mono
-italic_font       MonaspiceKr Nerd Font Mono Italic
-bold_font         MonaspiceKr Nerd Font Mono Bold
-bold_italic_font  MonaspiceKr Nerd Font Mono Bold Italic
+font_family       GeistMono Nerd Font Mono
+bold_font         GeistMono Nerd Font Mono Bold
 
 font_size        15
 disable_ligatures never
