--- a/config/hypr/keybindings.conf
+++ b/config/hypr/keybindings.conf
@@ -11,28 +11,20 @@ bind = SUPER SHIFT, l, movewindow, r
 bind = SUPER SHIFT, k, movewindow, u
 bind = SUPER SHIFT, j, movewindow, d
 
-bind = SUPER,Tab,cyclenext,
-bind = SUPER,Tab,bringactivetotop,
-
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 #
-bind = SUPER, Return, exec, kitty
+bind = SUPER, Return, exec, wezterm
 bind = SUPER, Q, killactive,
 bind = SUPER, M, exit,
-bind = SUPER, E, exec, thunar
 bind = SUPER, V, togglefloating,
+bind = SUPER, C, exec, pkill fuzzel || cliphist list | fuzzel --no-fuzzy --dmenu | cliphist decode | wl-copy
+
 bind = SUPER, R, togglesplit,killactive
 bind = SUPER, P, pseudo, # dwindle
-bind = SUPER, D, exec, anyrun
+bind = SUPER, D, exec, tofi-drun --drun-launch=true
 bind = SUPER,       F,      fullscreen, 1
 bind = SUPER, mouse:276, fullscreen, 0 
-bind = SUPER, mouse:276, exec, $notifycmd 'Fullscreen Mode'
-
-bind = SUPER, L, exec, swaylock
-
-bind = SUPER,       F,      exec, $notifycmd 'Fullscreen Mode'
-bind = SUPER,       S,      fullscreen, 0
-bind = SUPER,       S,      exec, $notifycmd 'Fullscreen Mode'
+bind = SUPER,       S,      fullscreen, 1
 bind = SUPER,       Space,  togglefloating,
 bind = SUPER,       Space,  centerwindow,
 
@@ -66,19 +58,20 @@ bind = SUPER SHIFT, 8, movetoworkspace, 8
 bind = SUPER SHIFT, 9, movetoworkspace, 9
 bind = SUPER SHIFT, 0, movetoworkspace, 10
 
-# Change Focus
-bind = SUPER, left,  movefocus, l
-bind = SUPER, right, movefocus, r
-
 # cycle workspaces
-bind = SUPER, up,    workspace, m+1
-bind = SUPER, down,  workspace, m-1
+bind = SUPER, up,    movefocus, u
+bind = SUPER, down,  movefocus, d
 
 # Move Active
 bind = SUPER_SHIFT, left,  movewindow, l
 bind = SUPER_SHIFT, right, movewindow, r
 bind = SUPER_SHIFT, up,    movewindow, u
 bind = SUPER_SHIFT, down,  movewindow, d
+
+# Next/previous workspace
+
+bind = $super SHIFT, tab, workspace, e+1
+bind = $super, tab, workspace, e-1
 
 # Resize Active
 binde = SUPER_CTRL, left,  resizeactive, -20 0
