--- a/config/hypr/windowrules.conf
+++ b/config/hypr/windowrules.conf
@@ -26,6 +26,7 @@ layerrule = ignorealpha 0.69, notifications
 
 windowrulev2 = opacity 0.90 0.90,class:^(thunar)$
 windowrulev2 = opacity 0.90 0.90,class:^(kitty)$
+windowrulev2 = opacity 0.90 0.90,class:^(wezterm)$
 windowrulev2 = opacity 0.80 0.80,class:^(nwg-look)$
 windowrulev2 = opacity 0.80 0.80,class:^(qt5ct)$
 
@@ -44,7 +45,9 @@ windowrulev2 = float,class:^(pavucontrol)$
 windowrulev2 = float,class:^(blueman-manager)$
 windowrulev2 = float,class:^(nm-applet)$
 windowrulev2 = float,class:^(nm-connection-editor)$
-
+windowrulev2 = idleinhibit focus,class:wezterm
 windowrulev2 = workspace 5, title:^(.*(Disc|WebC)ord.*)$
 
 windowrulev2 = workspace 4 , title:^(.*Firefox.*)$
+
+windowrulev2 = noanim, class:^(wezterm)$
