--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -1,13 +1,3 @@
-# This is an example Hyprland config file.
-#
-# Refer to the wiki for more information.
-
-#
-# Please note not all available settings / options are set here.
-# For a full list, see the wiki
-#
-
-# See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=eDP-1, 1920x1080, 0x0, 1
 monitor=HDMI-A-1, 1920x1080, 1920x0, 1
 
@@ -23,16 +13,15 @@ env = QT_QPA_PLATFORMTHEME,qt5ct
 
 
 exec-once = /usr/lib/xdg-desktop-portal-hyprland &
-exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP=Hyprland &
 exec-once = dbus-update-activation-environment --all &
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP &
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 &
 exec-once = /usr/bin/gnome-keyring-daemon --start --components=secrets &
 exec-once = mako &
 exec-once = wl-paste --watch cliphist store &
-udiskie &
+exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP=Hyprland &
 
-# $w1 = hyprctl hyprpaper wallpaper "eDP-1, ~/dotfiles/hypr/walls/2.png" 
+$w1 = hyprctl hyprpaper wallpaper "eDP-1, ~/dotfiles/hypr/walls/2.png" 
 
 # Execute your favorite apps at launch
 #exec-once = waybar
@@ -49,9 +38,6 @@ env = XCURSOR_THEME, Catppuccin-Mocha-Dark-Cursors
 input {
     kb_layout = de
     kb_variant =us
-    kb_model =
-    kb_options =
-    kb_rules =
 
     follow_mouse = 1
 
@@ -59,7 +45,6 @@ input {
         natural_scroll = false
     }
 
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 }
 
 device:wacom-intuos-s-pen {
@@ -73,9 +58,9 @@ general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     gaps_in = 4
-    gaps_out = 4
+    gaps_out = 6
     border_size = 2
-    col.active_border = 0xffb4befe 0xff89dceb 45deg
+    col.active_border = 0xff7c00ff 0xffff007c 45deg
     col.inactive_border = 0xff313244 0xff45475a 45deg
     resize_on_border=true
     layout = dwindle
@@ -84,6 +69,8 @@ general {
 
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
+
+  sensitivity = 0.8
 
 }
 
@@ -114,16 +101,17 @@ decoration {
     }
 
     drop_shadow = true
-    shadow_range = 8
+    shadow_ignore_window = true
+    shadow_range = 20
     shadow_render_power = 3
     #col.shadow= 0xff$b4befeAlpha
-    col.shadow = 0xffb4befe
+    col.shadow = rgba(00000055)
     col.shadow_inactive=0x50000000
 }
 
 #blurls=waybar
 #layerrule = blur, waybar
-#layerrule = blur, notifications
+layerrule = blur, notifications
 
 
 
@@ -187,17 +175,12 @@ xwayland {
 }
 
 misc {
+  enable_swallow = true
+  animate_mouse_windowdragging = false
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    force_default_wallpaper = 0 # Set to 0 to disable the anime mascot wallpapers
+  #force_default_wallpaper = 0 # Set to 0 to disable the anime mascot wallpapers
 }
 
-
-
-# Example per-device config
-# See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
-device:epic-mouse-v1 {
-    sensitivity = -0.5
-}
 debug {
 	#overlay = true
 	#damage_tracking = 0
