--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -32,7 +32,7 @@ exec-once = hyprpaper
 
 # Some default env vars.
 env = XCURSOR_SIZE,24
-env = XCURSOR_THEME, Catppuccin-Mocha-Dark-Cursors
+env = XCURSOR_THEME, Bibata-Modern-Classic
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
