--- a/config/starship.toml
+++ b/config/starship.toml
@@ -1,131 +1,95 @@
-# Sets user-defined palette
-palette = "catppuccin_mocha"
-
+add_newline = false
+command_timeout = 1000
+format = """$username$os$directory$git_branch$git_status$package$c$python$lua
+[ ❯ ](bold #ff007c)"""
 [character]
-# Note the use of Catppuccin color 'maroon'
-success_symbol = "[[♥](green) ❯](maroon)"
-error_symbol = "[❯](red)"
-vimcmd_symbol = "[❮](green)"
+success_symbol = ''
+error_symbol = ''
 
+# ---
+
+[os]
+format = '[on](blue) [󰣇](bold blue) '   
+disabled = false
+
+[os.symbols]
+Arch = '󰣇'
+
+[username]
+style_user = 'white bold'
+style_root = 'black bold'
+format = '[$user]($style) '
+disabled = false
+show_always = true
+
+# Shows current directory
 [directory]
 truncation_length = 4
-# Catppuccin 'lavender'
-style = "bold lavender"
-read_only = " 󰌾"
+truncation_symbol = '…/'
+home_symbol = '󰋜 ~'
+read_only_style = '197'
+read_only = '  '
+format = 'at [$path]($style)[$read_only]($read_only_style) '
 
-
-[c]
-symbol = " "
-
-[conda]
-symbol = " "
-
-[docker_context]
-symbol = " "
-
-[elixir]
-symbol = " "
-
-[fossil_branch]
-symbol = " "
-
+# Shows current git branch
 [git_branch]
-symbol = " "
+symbol = ' '
+format = '[$symbol$branch]($style)'
+# truncation_length = 4
+truncation_symbol = '…/'
+style = 'bold green'
 
-[golang]
-symbol = " "
-
-[guix_shell]
-symbol = " "
-
-[haskell]
-symbol = " "
+# Shows current git status
+[git_status]
+format = '[$all_status$ahead_behind]($style) '
+style = 'bold green'
+conflicted = '🏳'
+up_to_date = ''
+untracked = ' '
+ahead = '⇡${count}'
+diverged = '⇕⇡${ahead_count}⇣${behind_count}'
+behind = '⇣${count}'
+stashed = ' '
+modified = ' '
+staged = '[++\($count\)](green)'
+renamed = '襁 '
+deleted = ' '
 
 [hg_branch]
 symbol = " "
 
-[hostname]
-ssh_symbol = " "
-
 [java]
 symbol = " "
 
-[julia]
-symbol = " "
-
-[lua]
-symbol = " "
-
 [memory_usage]
-symbol = "󰍛 "
-
-[meson]
-symbol = "󰔷 "
-
-[nim]
-symbol = "󰆥 "
+symbol = " "
 
 [nix_shell]
-symbol = " "
+symbol = " "
 
-[nodejs]
-symbol = " "
-
-[os.symbols]
-Android = " "
-Arch = " "
-CentOS = " "
-Debian = " "
-EndeavourOS = " "
-Fedora = " "
-Linux = " "
-
-
-[package]
-symbol = "󰏗 "
-
-[pijul_channel]
-symbol = " "
 
 [python]
-symbol = " "
-
-[rlang]
-symbol = "󰟔 "
-
-[ruby]
-symbol = " "
+symbol = " "
+#pyenv_version_name = true
+format = 'via [${symbol}python (${version} )(\($virtualenv\) )]($style)'
+style = "bold yellow"
+pyenv_prefix = "venv "
+python_binary = ["./venv/bin/python", "python", "python3", "python2"]
+detect_extensions = ["py"]
+version_format = "v${raw}"
 
 [rust]
 symbol = " "
 
-[scala]
-symbol = " "
 
-[palettes.catppuccin_mocha]
-rosewater = "#f5e0dc"
-flamingo = "#f2cdcd"
-pink = "#f5c2e7"
-mauve = "#cba6f7"
-red = "#f38ba8"
-maroon = "#eba0ac"
-peach = "#fab387"
-yellow = "#f9e2af"
-green = "#a6e3a1"
-teal = "#94e2d5"
-sky = "#89dceb"
-sapphire = "#74c7ec"
-blue = "#89b4fa"
-lavender = "#b4befe"
-text = "#cdd6f4"
-subtext1 = "#bac2de"
-subtext0 = "#a6adc8"
-overlay2 = "#9399b2"
-overlay1 = "#7f849c"
-overlay0 = "#6c7086"
-surface2 = "#585b70"
-surface1 = "#45475a"
-surface0 = "#313244"
-base = "#1e1e2e"
-mantle = "#181825"
-crust = "#11111b"
+[helm]
+disabled = true
+
+[nodejs]
+disabled = true
+
+[ruby]
+disabled = true
+
+[terraform]
+disabled = true
