--- a/scripts/pacman.conf
+++ b/scripts/pacman.conf
@@ -36,7 +36,7 @@ ILoveCandy
 # We cannot check disk space from within a chroot environment
 #CheckSpace
 VerbosePkgLists
-ParallelDownloads = 7
+ParallelDownloads = 6
 
 # By default, pacman accepts packages signed by keys that its local keyring
 # trusts (see pacman-key and its man page), as well as unsigned packages.
@@ -89,8 +89,11 @@ Include = /etc/pacman.d/mirrorlist
 #[multilib-testing]
 #Include = /etc/pacman.d/mirrorlist
 
-#[multilib]
+[multilib]
 Include = /etc/pacman.d/mirrorlist
+
+[chaotic-aur]
+Include = /etc/pacman.d/chaotic-mirrorlist
 
 # An example of a custom package repository.  See the pacman manpage for
 # tips on creating your own repositories.
