--- a/scripts/pacman.conf
+++ b/scripts/pacman.conf
@@ -74,6 +74,12 @@ LocalFileSigLevel = Optional
 #[core-testing]
 #Include = /etc/pacman.d/mirrorlist
 
+[core-x86-64-v4]
+Include = /etc/pacman.d/alhp-mirrorlist
+
+[extra-x86-64-v4]
+Include = /etc/pacman.d/alhp-mirrorlist
+
 [core]
 Include = /etc/pacman.d/mirrorlist
 
@@ -88,12 +94,11 @@ Include = /etc/pacman.d/mirrorlist
 
 #[multilib-testing]
 #Include = /etc/pacman.d/mirrorlist
+[multilib-x86-64-v4]
+Include = /etc/pacman.d/alhp-mirrorlist
 
 [multilib]
 Include = /etc/pacman.d/mirrorlist
-
-[chaotic-aur]
-Include = /etc/pacman.d/chaotic-mirrorlist
 
 # An example of a custom package repository.  See the pacman manpage for
 # tips on creating your own repositories.
