--- a/system/makepkg.conf
+++ b/system/makepkg.conf
@@ -10,11 +10,11 @@
 #-- The download utilities that makepkg should use to acquire sources
 #  Format: 'protocol::agent'
 DLAGENTS=('file::/usr/bin/curl -qgC - -o %o %u'
-          'ftp::/usr/bin/curl -qgfC - --ftp-pasv --retry 3 --retry-delay 3 -o %o %u'
-          'http::/usr/bin/curl -qgb "" -fLC - --retry 3 --retry-delay 3 -o %o %u'
-          'https::/usr/bin/curl -qgb "" -fLC - --retry 3 --retry-delay 3 -o %o %u'
-          'rsync::/usr/bin/rsync --no-motd -z %u %o'
-          'scp::/usr/bin/scp -C %u %o')
+	'ftp::/usr/bin/curl -qgfC - --ftp-pasv --retry 3 --retry-delay 3 -o %o %u'
+	'http::/usr/bin/curl -qgb "" -fLC - --retry 3 --retry-delay 3 -o %o %u'
+	'https::/usr/bin/curl -qgb "" -fLC - --retry 3 --retry-delay 3 -o %o %u'
+	'rsync::/usr/bin/rsync --no-motd -z %u %o'
+	'scp::/usr/bin/scp -C %u %o')
 
 # Other common tools:
 # /usr/bin/snarf
@@ -24,10 +24,10 @@ DLAGENTS=('file::/usr/bin/curl -qgC - -o %o %u'
 #-- The package required by makepkg to download VCS sources
 #  Format: 'protocol::package'
 VCSCLIENTS=('bzr::breezy'
-            'fossil::fossil'
-            'git::git'
-            'hg::mercurial'
-            'svn::subversion')
+	'fossil::fossil'
+	'git::git'
+	'hg::mercurial'
+	'svn::subversion')
 
 #########################################################################
 # ARCHITECTURE, COMPILE FLAGS
@@ -67,7 +67,7 @@ DEBUG_CXXFLAGS="$DEBUG_CFLAGS"
 #-- check:    Run the check() function if present in the PKGBUILD
 #-- sign:     Generate PGP signature file
 #
-BUILDENV=(!distcc color !ccache check !sign)
+BUILDENV=(!distcc color ccache check !sign)
 #
 #-- If using DistCC, your MAKEFLAGS will also need modification. In addition,
 #-- specify a space-delimited list of hosts running in the DistCC cluster.
