--- a/config/hypr/hyprpaper.conf
+++ b/config/hypr/hyprpaper.conf
@@ -1,3 +1,3 @@
-preload = ~/dotfiles/walls/2.png
+preload = ~/dotfiles/walls/nord-street.png
 
-wallpaper = eDP-1, contain:~/dotfiles/walls/2.png
+wallpaper = eDP-1, contain:~/dotfiles/walls/nord-street.png
