--- a/system/makepkg.conf
+++ b/system/makepkg.conf
@@ -35,7 +35,7 @@ VCSCLIENTS=('bzr::breezy'
 #
 CARCH="x86_64"
 CHOST="x86_64-pc-linux-gnu"
-
+PACKAGECARCH="x86_64"
 #-- Compiler and Linker Flags
 #CPPFLAGS=""
 CFLAGS="-march=native -O3 -pipe -fno-plt -fexceptions \
@@ -45,10 +45,11 @@ CXXFLAGS="$CFLAGS -Wp,-D_GLIBCXX_ASSERTIONS"
 LDFLAGS="-Wl,-O1,--sort-common,--as-needed,-z,relro,-z,now -fuse-ld=mold"
 LTOFLAGS="-flto=auto"
 
-RUSTFLAGS="-C opt-level=2 -C target-cpu=native -C link-arg=-fuse-ld=mold"
+RUSTFLAGS="-C opt-level=3 -C target-cpu=native -C link-arg=-fuse-ld=mold"
 #RUSTFLAGS="-C opt-level=2"
 #-- Make Flags: change this for DistCC/SMP systems
 MAKEFLAGS="-j$(nproc)"
+NINJAFLAGS="-j$(nproc)"
 #-- Debugging flags
 DEBUG_CFLAGS="-g"
 DEBUG_CXXFLAGS="$DEBUG_CFLAGS"
